# 2-Prop-Drone

./: README.md
2 Prop Drone/Drone/: CMakeLists.txt
2 Prop Drone/Drone/inc/: BLDC.h  MPU6050.h  NRF24L01.h  SERVO.h
2 Prop Drone/Drone/src/: BLDC.cpp  MPU6050.cpp  NRF24L01.cpp  SERVO.cpp  main.cpp
2 Prop Drone/PS4_Remote/: PS4_Remote.ino
